<resources>
    <string name="app_name">Internship Seeker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Don\'t have an account? Signup!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Pssword should be at least 8 characters long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="client_id">299809458257-vml9gce03hvk35b8j72ed0h54el4igvr.apps.googleusercontent.com</string>
    <string name="signed_in_fmt">Welcome %s</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="heading">GetInternship</string>
    <string name="google_sign_up">Sign up with Google</string>

    <string name="select_role">Select your role</string>
    <string name="name">Name</string>
    <string name="choose_username">Choose a username</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="institution">Institution</string>
    <string name="dob">Select Date of Birth</string>
    <string name="cv_link">Add a public URL of your resume</string>
    <string name="gender_select">Select your gender</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>

    <string name="field0">computer vision</string>
    <string name="field1">content writing</string>
    <string name="field2">data mining</string>
    <string name="field4">electrical/electronics</string>
    <string name="field3">game development</string>
    <string name="field5">image processing</string>
    <string name="field6">marketing</string>
    <string name="field7">mechanical engineering</string>
    <string name="field8">mobile app dev</string>
    <string name="field9">programming</string>
    <string name="field10">software dev</string>
    <string name="field11">web dev</string>


    <string name="field_select">Select your fields of interest</string>
    <string name="done">DONE</string>
    <string name="student_role">STUDENT</string>
    <string name="employer_role">EMPLOYER</string>
    <string name="company">Company</string>
    <string name="designation">Designation</string>
    <string name="server_client_id">299809458257-dcpfrfao160m3185j8493lrdvlo9j10t.apps.googleusercontent.com</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_malformed_URL">Please enter a valid URL</string>
    <string name="error_one_field_required">Please select at least one field</string>
    <string name="error_one_skill_required">Please select at least one skill</string>
    <string name="signup">Sign Up</string>
    <string name="response_success">Skillset received successfully</string>
    <string name="error_sending_request">Please check your internet connection</string>
    <string name="percentage">Percentage</string>
    <string name="year_of_adm">Year of Admission</string>
    <string name="year_of_passing">Year of Passing</string>
    <string name="error_unresolvable">An unresolvable error has occurred. Please try again later</string>
    <string name="prompt_username">Username</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>

    <string name="profile_tab">Profile</string>
    <string name="messages_tab">Messages</string>
    <string name="home_tab">Home</string>
    <string name="logout_success">Logged out Successfully</string>
    <string name="already_logged_in">You are already logged in as </string>
    <string name="mark_read">Mark as read</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="marked_read">Message marked as read</string>
    <string name="snap">Something seems wrong. Please try again later.</string>
    <string name="message_deleted">Deleted</string>
    <string name="title_activity_message">Message</string>
    <string name="employer_home_heading">These people have the skills you seek</string>
    <string name="student_home_heading">These people seek the skills you have</string>
    <string name="subject">Subject</string>
    <string name="message_sent">Your message has been sent successfully!</string>
    <string name="receiver_username">Username of receiver</string>
    <string name="send_message">Send</string>
    <string name="cancel">Cancel</string>
    <string name="user_not_found">There is no user with this username.</string>
    <string name="prompt_receiver_username">Please enter username of receiver</string>
    <string name="success_message">success</string>
    <string name="login_to_continue">Account created succesfully, please login to continue.</string>

</resources>
