<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vishal.internshipseekerapp.LoginActivity"
    android:weightSum="1"
    android:background="@color/backgroundColor"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">



    <View android:background="#ffffff"
        android:layout_width = "match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/role_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/select_role"
        android:textSize="44dp"
        android:textStyle="bold"
        android:typeface="sans"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/student_role"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/student_role"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/employer_role"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/employer_role"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />

</LinearLayout>


