<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/screen_margins"
        android:layout_marginRight="@dimen/screen_margins"
        android:layout_marginTop="@dimen/screen_margins">
        <TextView
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/text_medium"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/text_medium"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/message_body_height"
            >

            <TextView
                android:id="@+id/message_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/message_options_margin">
        <Button
            android:id="@+id/mark_as_read"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/android_green"
            android:text="@string/mark_read"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:clickable="true"/>

        <Button
            android:id="@+id/delete_message"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/android_green"
            android:text="@string/delete"
            android:layout_marginStart="@dimen/message_button_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:clickable="true"/>

        <Button
            android:id="@+id/reply"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/message_button_margin"
            android:layout_height="wrap_content"
            android:background="@color/android_green"
            android:text="@string/reply"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>